サイドメニューボタンのページ遷移成功

--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
         </div>
         <!-- ----------------------------------------------/メイン１----------------------------------------------- -->
         <!-- ----------------------------------------------サイドメニュー----------------------------------------------- -->
-        <asid id="menu">
-          <ul class="menulist">
-            <li class="li1"><a href="#">HOME</a></li>
-            <li class="li2"><a href="#">スキル</a></li>
-            <li class="li3"><a href="#">実績</a></li>
-            <li class="li4"><a href="#">連絡先</a></li>
-          </ul>
-        </asid>
+        <nav id="pagination" class="pagination">
+            <a id="pagination1" class="li1" href="#section1">HOME</a>
+            <a id="pagination2" class="li2" href="#section2">スキル</a>
+            <a id="pagination3" class="li3" href="#section3">実績</a>
+            <a id="pagination4" class="li4" href="#section4">連絡先</a>
+        </nav>
       </section>
       <!-- ----------------------------------------------/サイドメニュー----------------------------------------------- -->
       <!-- ----------------------------------------------メイン２----------------------------------------------- -->
@@ -93,12 +91,6 @@
       </section>
       <!-- ----------------------------------------------/メイン４----------------------------------------------- -->
     </div>
-    <nav id="pagination" class="pagination">
-      <a id="pagination1" href="#section1"></a>
-      <a id="pagination2" href="#section2"></a>
-      <a id="pagination3" href="#section3"></a>
-      <a id="pagination4" href="#section4"></a>
-    </nav>
     <script>
       // スムーススクロール
       const paginations = document.querySelectorAll(".pagination a");
