サイドメニューボタン縦並び

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
         <!-- ----------------------------------------------/メイン１----------------------------------------------- -->
         <!-- ----------------------------------------------サイドメニュー----------------------------------------------- -->
         <nav id="pagination" class="pagination">
+          <div class="menu">
             <a id="pagination1" class="li1" href="#section1">HOME</a>
             <a id="pagination2" class="li2" href="#section2">スキル</a>
-            <a id="pagination3" class="li3" href="#section3">実績</a>
-            <a id="pagination4" class="li4" href="#section4">連絡先</a>
+            <a id="pagination3" class="li2" href="#section3">実績</a>
+            <a id="pagination4" class="li2" href="#section4">連絡先</a>
+          </div>
         </nav>
       </section>
       <!-- ----------------------------------------------/サイドメニュー----------------------------------------------- -->
