フォントその他諸々調整

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <section id="section1" class="section section1">
         <div id="main1">
           <div class="title">
-            <h1 id="jafont">村尾俊介</h1>
+            <h1>村尾俊介</h1>
             <p class="name">MURAO SHUNSUKE</p>
           </div>
           <p class="aboutjob">My profession is</p>
-          <p class="job" id="jafont">ウェブデザイン・コーディング</p>
+          <p class="job">ウェブデザイン・コーディング</p>
           <p class="joben">WEB DESIGN & CODING</p>
         </div>
         <!-- ----------------------------------------------/メイン１----------------------------------------------- -->
@@ -70,7 +70,7 @@
           <div class="list1">
             <p class="listname1">・(有)西沢表具店</p>
             <p class="url1">URL : <a href="https://www.nishizawahyougu.jp">https://www.nishizawahyougu.jp</a></p>
-            <iframe class="sample1" src="https://www.nishizawahyougu.jp" target="_blank" frameborder="0" name="nishizawahp" width="550" height="300"></iframe>
+              <iframe class="sample1" src="https://www.nishizawahyougu.jp" target="_blank" frameborder="0" name="nishizawahp" width="550" height="300"></iframe>
           </div>
         </div>
       </section>
@@ -86,7 +86,7 @@
             </div>
             <div class="address">
               <p>shun02051@gmail.com</p>
-              <p> <a href="https://twitter.com/s_nnnnxxnx">@s_nnnnxxnx</a></p>
+              <a href="https://twitter.com/s_nnnnxxnx">@s_nnnnxxnx</a>
             </div>
           </div>
         </div>
