--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <!-- ----------------------------------------------/メイン３----------------------------------------------- -->
       <section id="section3" class="section section3">
         <div id="main3">
-          <h4>PERFORMANCE</h4>
+          <h4>PERFORMANCEああ</h4>
           <div class="list1">
             <p class="listname1">・(有)西沢表具店</p>
             <p class="url1">URL : <a href="https://www.nishizawahyougu.jp">https://www.nishizawahyougu.jp</a></p>
