--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="UTF-8" />
-    <title>フルページスクロール</title>
+    <meta charset="UTF-8"/>
+    <title>shnmro | Webデザイン</title>
     <script src="smoothscroll.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
