--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
               <p>Twitter</p>
             </div>
             <div class="address">
-              <p>shun02051@gmail.com</p>
+              <a href="mailto:shun02051@gmail.com">shun02051@gmail.com</a>
               <a href="https://twitter.com/s_nnnnxxnx">@s_nnnnxxnx</a>
             </div>
           </div>
         </div>
       </section>
-      <!-- ----------------------------------------------/メイン４----------------------------------------------- -->
+      <!-- ----------------------------------------------/メイン----------------------------------------------- -->
     </div>
     <script>
       // スムーススクロール
