--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="fullPageScroll">
-      <!-- ----------------------------------------------メイン１----------------------------------------------- -->
+      <!-- メイン１ -->
       <section id="section1" class="section section1">
         <div id="main1">
           <div class="title">
@@ -20,8 +20,8 @@
           <p class="job">ウェブデザイン・コーディング</p>
           <p class="joben">WEB DESIGN & CODING</p>
         </div>
-        <!-- ----------------------------------------------/メイン１----------------------------------------------- -->
-        <!-- ----------------------------------------------サイドメニュー----------------------------------------------- -->
+        <!-- /メイン１ -->
+        <!-- サイドメニュー -->
         <nav id="pagination" class="pagination">
           <div class="menu">
             <a id="pagination1" class="li1" href="#section1">HOME</a>
@@ -31,8 +31,8 @@
           </div>
         </nav>
       </section>
-      <!-- ----------------------------------------------/サイドメニュー----------------------------------------------- -->
-      <!-- ----------------------------------------------メイン２----------------------------------------------- -->
+      <!-- /サイドメニュー -->
+      <!-- メイン２ -->
       <section id="section2" class="section section2">
         <div id="main2">
           <h2>SKILLS</h2>
@@ -63,8 +63,8 @@
           </div>
         </div>
       </section>
-      <!-- ----------------------------------------------/メイン２----------------------------------------------- -->
-      <!-- ----------------------------------------------/メイン３----------------------------------------------- -->
+      <!-- /メイン２ -->
+      <!-- /メイン３ -->
       <section id="section3" class="section section3">
         <div id="main3">
           <h4>PERFORMANCE</h4>
@@ -75,8 +75,8 @@
           </div>
         </div>
       </section>
-      <!-- ----------------------------------------------/メイン３----------------------------------------------- -->
-      <!-- ----------------------------------------------メイン４----------------------------------------------- -->
+      <!-- /メイン３ -->
+      <!-- メイン４ -->
       <section id="section4" class="section section4">
         <div id="main4">
           <h5>CONTACT</h5>
@@ -92,7 +92,7 @@
           </div>
         </div>
       </section>
-      <!-- ----------------------------------------------/メイン----------------------------------------------- -->
+      <!-- /メイン -->
     </div>
     <script>
       // スムーススクロール
