問い合わせ要素名をaddressに

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
               <p>Mail</p>
               <p>Twitter</p>
             </div>
-            <div class="address">
+            <address class="address">
               <a href="mailto:shun02051@gmail.com">shun02051@gmail.com</a>
               <a href="https://twitter.com/s_nnnnxxnx">@s_nnnnxxnx</a>
-            </div>
+            </address>
           </div>
         </div>
       </section>
