--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
         <!-- サイドメニュー -->
         <nav id="pagination" class="pagination">
           <div class="menu">
+            <div class="menutitle">
+              <p class="menuname">Shunsuke Murao's<br>Portfolio</p>
+            </div>
             <a id="pagination1" class="li1" href="#section1">HOME</a>
             <a id="pagination2" class="li2" href="#section2">スキル</a>
             <a id="pagination3" class="li2" href="#section3">実績</a>
             <a id="pagination4" class="li2" href="#section4">連絡先</a>
+            <div class="menutitle2">
+              <p class="jobmenu">Webdesign & Coding</p>
+            </div>
           </div>
         </nav>
       </section>
