サイドメニューに表題作って、１ページ目の中央寄せ解除

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>shnmro | Webデザイン</title>
     <script src="smoothscroll.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="fullPageScroll">
@@ -25,14 +27,14 @@
         <nav id="pagination" class="pagination">
           <div class="menu">
             <div class="menutitle">
-              <p class="menuname">Shunsuke Murao's<br>Portfolio</p>
+              <p id="allura" class="menuname">Shunsuke Murao's<br>Portfolio</p>
             </div>
             <a id="pagination1" class="li1" href="#section1">HOME</a>
             <a id="pagination2" class="li2" href="#section2">スキル</a>
             <a id="pagination3" class="li2" href="#section3">実績</a>
             <a id="pagination4" class="li2" href="#section4">連絡先</a>
             <div class="menutitle2">
-              <p class="jobmenu">Webdesign & Coding</p>
+              <p id="allura" class="myjob">Webdesign & Coding</p>
             </div>
           </div>
         </nav>
