--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
       <section id="section1" class="section section1">
         <div id="main1">
           <div class="title">
-            <h1>村尾俊介</h1>
+            <h1 class="janame">村尾俊介</h1>
             <p class="name">MURAO SHUNSUKE</p>
           </div>
-          <p class="aboutjob">My profession is</p>
-          <p class="job">ウェブデザイン・コーディング</p>
-          <p class="joben">WEB DESIGN & CODING</p>
+          <div class="myself-date">
+            <p class="age">Age</p>
+            <p class="age1">30</p>
+            <p class="born">Born</p>
+            <p class="born1">1990/2/5</p>
+          </div>
+          <div class="self-introduction">
+            <p class="introduction">アルバイトを経て、内装工事の会社に入社しました。<br>建築業界での業務のIT化が遅れていると感じ、以前から興味のあったWEB制作の勉強を始めました。<br>IT面から中小企業の助けになりたいと思い、エンジニアへ転職活動をしています。<br>２０２０.１０　有限会社西沢表具店HP作成<br>２０２０.１１ポートフォリオ作成（随時更新中）</p>
+          </div>
         </div>
         <!-- /メイン１ -->
         <!-- サイドメニュー -->
@@ -50,7 +56,7 @@
               <p class="skill">JavaScript</p>
             </div>
             <div class="experience">
-              <p class="months">９ヶ月</p>
+              <p class="months">１０ヶ月</p>
               <p class="months">２ヶ月</p>
             </div>
           </div>
@@ -63,8 +69,8 @@
               <p class="skill">Photoshop</p>
             </div>
             <div class="experience2">
-              <p class="months">９ヶ月</p>
-              <p class="months">６ヶ月</p>
+              <p class="months">１０ヶ月</p>
+              <p class="months">７ヶ月</p>
               <p class="months">３ヶ月</p>
               <p class="months">１ヶ月</p>
             </div>
