デモサイト１へのリンク設置

--- a/index.html
+++ b/index.html
@@ -82,10 +82,14 @@
       <section id="section3" class="section section3">
         <div id="main3">
           <h4>PERFORMANCE</h4>
-          <div class="list1">
-            <p class="listname1">・(有)西沢表具店</p>
+          <div class="list">
+            <p class="listname1">・(有)西沢表具店公式</p>
             <p class="url1">URL : <a href="https://www.nishizawahyougu.jp">https://www.nishizawahyougu.jp</a></p>
               <iframe class="sample1" src="https://www.nishizawahyougu.jp" target="_blank" frameborder="0" name="nishizawahp" width="550" height="300"></iframe>
+          </div>
+          <div class="list">
+            <p class="listname1">・ECサイト(デモサイト)</p>
+            <p class="url1">LINK → <a href="https://www.shnmro.sakura.ne.jp/demo1.html" target="_blank" rel="noopener noreferrer">Creators Must Buy</a></p>
           </div>
         </div>
       </section>
