画像の名称アルファベット表記に

--- a/demo1.html
+++ b/demo1.html
@@ -12,7 +12,7 @@
 
     <!-- ヘッダー左 -->
     <div id="h_logo">
-      <img src="images/ロゴ.png" alt="サイトロゴ">
+      <img src="images/logo.png" alt="サイトロゴ">
     </div>
     <!-- /ヘッダー左 -->
 
@@ -23,13 +23,13 @@
         <p class="welcome">ようこそ、<span id="name">ゲスト</span>さん</p>
         <div class="" id="searchspace">
           <input type="text" id="searchinput">
-          <a id="searchbutton" href=""><img src="images/検索アイコン.png" alt="検索ボタン"></a>
+          <a id="searchbutton" href=""><img src="images/search.png" alt="検索ボタン"></a>
         </div>
       </div>
       
       <div class="" id="user">
         <a id="userlogin" href="">ログイン</a>
-        <img id="usericon" src="images/アカウントアイコン.png" alt="アカウントのアイコン">
+        <img id="usericon" src="images/account.png" alt="アカウントのアイコン">
       </div>
 
     </div>
@@ -37,9 +37,9 @@
 
     <!-- ヘッダー右 -->
     <div id="h_icons">
-      <a href=""><img src="images/お気に入りアイコン.png" alt="お気に入りのアイコン"></a>
-      <a href=""><img src="images/カートのアイコン.png" alt="カートのアイコン"></a>
-      <a href=""><img src="images/通知アイコン.png" alt="通知のアイコン"></a>
+      <a href=""><img src="images/fav.png" alt="お気に入りのアイコン"></a>
+      <a href=""><img src="images/cart.png" alt="カートのアイコン"></a>
+      <a href=""><img src="images/bell.png" alt="通知のアイコン"></a>
     </div>
     <!-- /ヘッダー右 -->
    
@@ -72,10 +72,10 @@
         <!-- スライド部分 -->
         <article class="cp_cssslider">
           <div class="cp_slidewrapper">
-            <div class="cp_slide_item"><img src="images/キャンペーン情報.png" alt="キャンペーン情報1"></div>
-            <div class="cp_slide_item"><img src="images/キャンペーン情報２.png" alt="キャンペーン情報2"></div>
-            <div class="cp_slide_item"><img src="images/キャンペーン情報３.png" alt="キャンペーン情報3"></div>
-            <div class="cp_slide_item"><img src="images/キャンペーン情報４.png" alt="キャンペーン情報4"></div>
+            <div class="cp_slide_item"><img src="images/campaign1.png" alt="キャンペーン情報1"></div>
+            <div class="cp_slide_item"><img src="images/campaign2.png" alt="キャンペーン情報2"></div>
+            <div class="cp_slide_item"><img src="images/campaign3.png" alt="キャンペーン情報3"></div>
+            <div class="cp_slide_item"><img src="images/campaign4.png.png" alt="キャンペーン情報4"></div>
           </div>
         </article>
         <!-- /スライド部分 -->
@@ -92,58 +92,58 @@
         <div id="products">
 
           <div class="product">
-            <img class="pro_contents" src="images/商品５.png" alt="パソコンの写真">
-            <p class="fav_icon"><input type="image" src="images/お気に入りアイコン商品用.png"></p>
+            <img class="pro_contents" src="images/pro5.png" alt="パソコンの写真">
+            <p class="fav_icon"><input type="image" src="images/favpro.png"></p>
             <p class="pro_name">iMAC 2020 27インチ<br>¥140,000</p>
-            <p class="cart_in"><input type="image" src="images/商品用カートのアイコン.png"></p>
+            <p class="cart_in"><input type="image" src="images/cartpro.png"></p>
           </div>
           <div class="product">
-            <img class="pro_contents" src="images/商品６.png" alt="パソコンの写真">
-            <p class="fav_icon"><input type="image" src="images/お気に入りアイコン商品用.png"></p>
+            <img class="pro_contents" src="images/pro6.png" alt="パソコンの写真">
+            <p class="fav_icon"><input type="image" src="images/favpro.png"></p>
             <p class="pro_name">iMAC 2019 27インチ<br>¥98,000</p>
-            <p class="cart_in"><input type="image" src="images/商品用カートのアイコン.png"></p>
+            <p class="cart_in"><input type="image" src="images/cartpro.png"></p>
           </div>
           <div class="product">
-            <img class="pro_contents" src="images/商品７.png" alt="絵筆の写真">
-            <p class="fav_icon"><input type="image" src="images/お気に入りアイコン商品用.png"></p>
+            <img class="pro_contents" src="images/pro7.png" alt="絵筆の写真">
+            <p class="fav_icon"><input type="image" src="images/favpro.png"></p>
             <p class="pro_name">絵筆（6本セット）<br>¥1,200</p>
-            <p class="cart_in"><input type="image" src="images/商品用カートのアイコン.png"></p>
+            <p class="cart_in"><input type="image" src="images/cartpro.png"></p>
           </div>
           <div class="product">
-            <img class="pro_contents" src="images/商品８.png" alt="クリップボードの写真">
-            <p class="fav_icon"><input type="image" src="images/お気に入りアイコン商品用.png"></p>
+            <img class="pro_contents" src="images/pro8.png" alt="クリップボードの写真">
+            <p class="fav_icon"><input type="image" src="images/favpro.png"></p>
             <p class="pro_name">クリップボード<br>¥600</p>
-            <p class="cart_in"><input type="image" src="images/商品用カートのアイコン.png"></p>
+            <p class="cart_in"><input type="image" src="images/cartpro.png"></p>
           </div>
           <div class="product">
-            <img class="pro_contents" src="images/商品２.png" alt="クリップの写真">
-            <p class="fav_icon"><input type="image" src="images/お気に入りアイコン商品用.png"></p>
+            <img class="pro_contents" src="images/pro2.png" alt="クリップの写真">
+            <p class="fav_icon"><input type="image" src="images/favpro.png"></p>
             <p class="pro_name">クリップ（小30個入）<br>¥380</p>
-            <p class="cart_in"><input type="image" src="images/商品用カートのアイコン.png"></p>
+            <p class="cart_in"><input type="image" src="images/cartpro.png"></p>
           </div>
           <div class="product">
-            <img class="pro_contents" src="images/商品１.png" alt="観葉植物の写真">
-            <p class="fav_icon"><input type="image" src="images/お気に入りアイコン商品用.png"></p>
+            <img class="pro_contents" src="images/pro1.png" alt="観葉植物の写真">
+            <p class="fav_icon"><input type="image" src="images/favpro.png"></p>
             <p class="pro_name">観葉植物<br>¥1,200</p>
-            <p class="cart_in"><input type="image" src="images/商品用カートのアイコン.png"></p>
+            <p class="cart_in"><input type="image" src="images/cartpro.png"></p>
           </div>
           <div class="product">
-            <img class="pro_contents" src="images/商品９.png" alt="観葉植物（小）２個">
-            <p class="fav_icon"><input type="image" src="images/お気に入りアイコン商品用.png"></p>
+            <img class="pro_contents" src="images/pro9.png" alt="観葉植物（小）２個">
+            <p class="fav_icon"><input type="image" src="images/favpro.png"></p>
             <p class="pro_name">観葉植物（小）２個<br>¥1,300</p>
-            <p class="cart_in"><input type="image" src="images/商品用カートのアイコン.png"></p>
+            <p class="cart_in"><input type="image" src="images/cartpro.png"></p>
           </div>
           <div class="product">
-            <img class="pro_contents" src="images/商品３.png" alt="文具セット">
-            <p class="fav_icon"><input type="image" src="images/お気に入りアイコン商品用.png"></p>
+            <img class="pro_contents" src="images/pro3.png" alt="文具セット">
+            <p class="fav_icon"><input type="image" src="images/favpro.png"></p>
             <p class="pro_name">文具セット<br>¥1,280</p>
-            <p class="cart_in"><input type="image" src="images/商品用カートのアイコン.png"></p>
+            <p class="cart_in"><input type="image" src="images/cartpro.png"></p>
           </div>
           <div class="product">
-            <img class="pro_contents" src="images/商品４.png" alt="カラーペン6色セット">
-            <p class="fav_icon"><input type="image" src="images/お気に入りアイコン商品用.png"></p>
+            <img class="pro_contents" src="images/pro4.png" alt="カラーペン6色セット">
+            <p class="fav_icon"><input type="image" src="images/favpro.png"></p>
             <p class="pro_name">カラーペン6色セット<br>¥1,280</p>
-            <p class="cart_in"><input type="image" src="images/商品用カートのアイコン.png"></p>
+            <p class="cart_in"><input type="image" src="images/cartpro.png"></p>
           </div>
 
         </div>
@@ -224,7 +224,7 @@
       </div>
 
       <div id="f_logo">
-        <img src="images/ロゴ.png" alt="cmbのロゴ">
+        <img src="images/logo.png" alt="cmbのロゴ">
       </div>
 
       <p id="copyright">copyright (c) CreatorsMustBuy all rights reserved.</p>
@@ -234,7 +234,7 @@
   <!-- /フッター -->
 
   <!-- 最上部へ戻るアイコン -->
-  <a href="#h_logo" id="pagenation"><img src="images/上へ戻るアイコン.png" alt="上へ戻るアイコン"></a>
+  <a href="#h_logo" id="pagenation"><img src="images/bucktotop.png" alt="上へ戻るアイコン"></a>
   <!-- /最上部へ戻るアイコン -->
 
 </body>
