--- a/demo1.html
+++ b/demo1.html
@@ -75,7 +75,7 @@
             <div class="cp_slide_item"><img src="images/campaign1.png" alt="キャンペーン情報1"></div>
             <div class="cp_slide_item"><img src="images/campaign2.png" alt="キャンペーン情報2"></div>
             <div class="cp_slide_item"><img src="images/campaign3.png" alt="キャンペーン情報3"></div>
-            <div class="cp_slide_item"><img src="images/campaign4.png.png" alt="キャンペーン情報4"></div>
+            <div class="cp_slide_item"><img src="images/campaign4.png" alt="キャンペーン情報4"></div>
           </div>
         </article>
         <!-- /スライド部分 -->
